fixed small gap between nav bar and home section

--- a/src/CSS/Home.css
+++ b/src/CSS/Home.css
@@ -10,7 +10,10 @@ h1 {
 
 #home {
   margin: 0;
+  position: relative;
+  top: -1vh;
   height: 100vh;
+  max-height: 100%;
   max-height: 100vh;
   width: 100vw;
   max-width: 100%;
